==> Bondzio/dots-on-a-map/sensornode/source/Micrium/Software/uC-FS/Examples/WorkInProgress/BSP/Dev/NAND/NXP/LPC2468-EA/fs_dev_nand_bsp.c <==
#define    FS_DEV_NAND_BSP_MODULE
#include  <fs_dev_nand.h>
#define  LPC2XXX_PERIPH_ID_EMC                            11u
#define  LPC2468_EA_NAND_BASE_ADDR                0x81000000u
#define  LPC2468_EA_NAND_DATA_ADDR               (LPC2468_EA_NAND_BASE_ADDR & 0xFFE7FFFFu)                  /* See note (2) */
#define  LPC2468_EA_NAND_CMD_ADDR               ((LPC2468_EA_NAND_BASE_ADDR & 0xFFF7FFFFu) | 0x00100000u)   /* See note (3) */
#define  LPC2468_EA_NAND_ADDR_ADDR              ((LPC2468_EA_NAND_BASE_ADDR & 0xFFEFFFFFu) | 0x00080000u)   /* See note (4) */
#define  FS_DEV_NAND_BSP_TS_RESOLUTION                   22u
#define  LPC2XXX_REG_PCONP                          (*(volatile CPU_REG32 *)(0xE01FC0C4u))
#define  LPC24XX_REG_PINSEL0                        (*(volatile CPU_REG32 *)(0xE002C000u))
#define  LPC24XX_REG_PINSEL1                        (*(volatile CPU_REG32 *)(0xE002C004u))
#define  LPC24XX_REG_PINSEL2                        (*(volatile CPU_REG32 *)(0xE002C008u))
#define  LPC24XX_REG_PINSEL3                        (*(volatile CPU_REG32 *)(0xE002C00Cu))
#define  LPC24XX_REG_PINSEL4                        (*(volatile CPU_REG32 *)(0xE002C010u))
#define  LPC24XX_REG_PINSEL5                        (*(volatile CPU_REG32 *)(0xE002C014u))
#define  LPC24XX_REG_PINSEL6                        (*(volatile CPU_REG32 *)(0xE002C018u))
#define  LPC24XX_REG_PINSEL7                        (*(volatile CPU_REG32 *)(0xE002C01Cu))

CPU_BOOLEAN  FSDev_NAND_BSP_Open (FS_QTY      unit_nbr,
                                  CPU_INT08U  bus_width)
{
    CPU_INT32U  pinsel;
    CPU_INT32U  pinmode;
    CPU_INT32U  fiodir;
    CPU_INT32U  emcstaticcnfg;


    if (unit_nbr != 0u) {
        FS_TRACE_INFO(("FSDev_NAND_BSP_Open(): Invalid unit nbr: %d.\r\n", unit_nbr));
        return (DEF_FAIL);
    }

    LPC24XX_REG_EMCCONTROL  = 0x00000001u;                  /* Dis addr mirror.                                     */
                                                            /* Turn on EMC PCLK                                     */
    LPC2XXX_REG_PCONP      |= DEF_BIT(LPC2XXX_PERIPH_ID_EMC);

    pinsel                  =  LPC24XX_REG_PINSEL4;         /* Cfg P2[12] as GPIO                                   */
    pinsel                 &= ~0x03000000u;
    LPC24XX_REG_PINSEL4     =  pinsel;

    pinmode                 =  LPC24XX_REG_PINMODE4;
    pinmode                &= ~0x03000000u;
    LPC24XX_REG_PINMODE4   |=  0x02000000u;

    fiodir                  =  LPC24XX_REG_FIO2DIR;         /* Cfg P2[12] as input                                  */
    fiodir                 &= ~0x00001000u;
    LPC24XX_REG_FIO2DIR     =  fiodir;

    pinsel                  =  LPC24XX_REG_PINSEL6;         /* Cfg P3[0..7] as D0..7.                               */
    pinsel                 &= ~0x0000FFFFu;
    pinsel                 |=  0x00005555u;
    LPC24XX_REG_PINSEL6     =  pinsel;

    pinmode                 =  LPC24XX_REG_PINMODE6;
    pinmode                &= ~0x0000FFFFu;
    LPC24XX_REG_PINMODE6   |=  0x0000AAAAu;
                                                            /* Cfg P4[19..20] as A19..20.                           */
                                                            /* Cfg P4[24..25] as nOE, nWE                           */
    pinsel                  =  LPC24XX_REG_PINSEL9;         /* Cfg P4[31] as nCS1.                                  */
    pinsel                 &= ~0x300F03C0u;
    pinsel                 |=  0x10050140u;
    LPC24XX_REG_PINSEL9     =  pinsel;

    pinmode                 =  LPC24XX_REG_PINMODE9;
    pinmode                &= ~0x303F03C0u;
    LPC24XX_REG_PINMODE9   |=  0x202A0280u;
                                                            /* Cfg P4[31] as output                                 */
    fiodir                  =  LPC24XX_REG_FIO4DIR;
    fiodir                 |=  0x80000000u;
    LPC24XX_REG_FIO4DIR     =  fiodir;

    FS_OS_Dly_ms(100u);

    if (bus_width == 8u) {
        emcstaticcnfg = 0x00000080u;
    } else if (bus_width == 16u) {
        emcstaticcnfg = 0x00000081u;
    } else {
        emcstaticcnfg = 0x00000082u;
    }

    LPC24XX_REG_EMCSTATICCNFG1     = emcstaticcnfg;
    LPC24XX_REG_EMCSTATICWAITWEN1  = 0u;
    LPC24XX_REG_EMCSTATICWAITOEN1  = 0u;
    LPC24XX_REG_EMCSTATICWAITRD1   = 1u;
    LPC24XX_REG_EMCSTATICWAITPG1   = 0u;
    LPC24XX_REG_EMCSTATICWAITWR1   = 0u;
    LPC24XX_REG_EMCSTATICWAITTURN1 = 0u;

    FS_OS_Dly_ms(100u);

    return (DEF_OK);
}

void  FSDev_NAND_BSP_WrAddr (FS_QTY       unit_nbr,
                             CPU_INT08U  *p_addr,
                             CPU_SIZE_T   cnt)
{
    volatile  CPU_INT08U  *p_addr_08;


    (void)&unit_nbr;                                        /* Prevent compiler warning                             */
    
    p_addr_08 = (volatile CPU_INT08U *)p_addr;
    
    while (cnt > 0) {
        FS_DEV_NAND_BSP_ADDR_WR(*p_addr_08);

        p_addr_08++;
        cnt--;
    }
}

void  FSDev_NAND_BSP_WrCmd (FS_QTY       unit_nbr,
                            CPU_INT08U  *p_cmd,
                            CPU_SIZE_T   cnt)
{
    volatile  CPU_INT08U  *p_cmd_08;


    (void)&unit_nbr;                                        /* Prevent compiler warning                             */
    
    p_cmd_08 = (volatile CPU_INT08U *)p_cmd;

    while (cnt > 0) {
        FS_DEV_NAND_BSP_CMD_WR(*p_cmd_08);

        p_cmd_08++;
        cnt--;
    }
}
