==> Bondzio/dots-on-a-map/sensornode/source/Micrium/Software/uC-FS/Examples/WorkInProgress/BSP/Dev/NAND/ST/STM3210E-EVAL/fs_dev_nand_bsp.c <==
#define    FS_DEV_NAND_BSP_MODULE
#include  <fs_dev_nand.h>
#include  <fs_dev_nand_stm32.h>
#include  <stm32f10x.h>
#include  <ecc.h>
#define  STM32_ADDR_DATA                           0x70000000u
#define  STM32_ADDR_ADDR                           0x70020000u
#define  STM32_ADDR_CMD                            0x70010000u
#define  STM32_REG_FSMC_BCR1        (*(CPU_REG32 *)0xA0000000u)
#define  STM32_REG_FSMC_BCR2        (*(CPU_REG32 *)0xA0000008u)
#define  STM32_REG_FSMC_BCR3        (*(CPU_REG32 *)0xA0000010u)
#define  STM32_REG_FSMC_BCR4        (*(CPU_REG32 *)0xA0000018u)
#define  STM32_REG_FSMC_BTR1        (*(CPU_REG32 *)0xA0000004u)
#define  STM32_REG_FSMC_BTR2        (*(CPU_REG32 *)0xA000000Cu)
#define  STM32_REG_FSMC_BTR3        (*(CPU_REG32 *)0xA0000014u)
#define  STM32_REG_FSMC_BTR4        (*(CPU_REG32 *)0xA000001Cu)
#define  STM32_REG_FSMC_BWTR1       (*(CPU_REG32 *)0xA0000100u)
#define  STM32_REG_FSMC_BWTR2       (*(CPU_REG32 *)0xA0000104u)
#define  STM32_REG_FSMC_BWTR3       (*(CPU_REG32 *)0xA0000114u)
#define  STM32_REG_FSMC_BWTR4       (*(CPU_REG32 *)0xA000011Cu)
#define  STM32_REG_FSMC_PCR2        (*(CPU_REG32 *)0xA0000060u)
#define  STM32_REG_FSMC_PCR3        (*(CPU_REG32 *)0xA0000080u)
#define  STM32_REG_FSMC_PCR4        (*(CPU_REG32 *)0xA00000A0u)
#define  STM32_REG_FSMC_SR2         (*(CPU_REG32 *)0xA0000064u)
#define  STM32_REG_FSMC_SR3         (*(CPU_REG32 *)0xA0000084u)
#define  STM32_REG_FSMC_SR4         (*(CPU_REG32 *)0xA00000A4u)

CPU_BOOLEAN  FSDev_NAND_BSP_Open (FS_QTY      unit_nbr,
                                  CPU_INT08U  bus_width)
{
    GPIO_InitTypeDef                   gpio_init;
    FSMC_NANDInitTypeDef               nand_init;
    FSMC_NAND_PCCARDTimingInitTypeDef  p;


    RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOD | RCC_APB2Periph_GPIOE | RCC_APB2Periph_GPIOF | RCC_APB2Periph_GPIOG, ENABLE);

                                                                /* ---------------------- CFG GPIO -------------------- */
                                                                /* CLE, ALE, D0..3, NOW, NWE & NCE2 NAND pin cfg.       */
    gpio_init.GPIO_Pin   = GPIO_Pin_11 | GPIO_Pin_12 | GPIO_Pin_14 | GPIO_Pin_15 |
                           GPIO_Pin_0  | GPIO_Pin_1  | GPIO_Pin_4  | GPIO_Pin_5  | GPIO_Pin_7;
    gpio_init.GPIO_Speed = GPIO_Speed_50MHz;
    gpio_init.GPIO_Mode  = GPIO_Mode_AF_PP;

    GPIO_Init(GPIOD, &gpio_init);

                                                                /* D4..7 NAND pin configuration.                        */
    gpio_init.GPIO_Pin   = GPIO_Pin_7 | GPIO_Pin_8 | GPIO_Pin_9 | GPIO_Pin_10;

    GPIO_Init(GPIOE, &gpio_init);


                                                                /* NWAIT NAND pin configuration.                        */
    gpio_init.GPIO_Pin   = GPIO_Pin_6;
    gpio_init.GPIO_Speed = GPIO_Speed_50MHz;
    gpio_init.GPIO_Mode  = GPIO_Mode_IPU;

    GPIO_Init(GPIOD, &gpio_init);

                                                                /* INT2 NAND pin configuration.                         */
    gpio_init.GPIO_Pin   = GPIO_Pin_6;
    GPIO_Init(GPIOG, &gpio_init);

                                                                /* ---------------------- CFG FSMC -------------------- */
    p.FSMC_SetupTime                          = 0x1;
    p.FSMC_WaitSetupTime                      = 0x3;
    p.FSMC_HoldSetupTime                      = 0x2;
    p.FSMC_HiZSetupTime                       = 0x1;

    nand_init.FSMC_Bank                       = FSMC_Bank2_NAND;
    nand_init.FSMC_Waitfeature                = FSMC_Waitfeature_Enable;
    nand_init.FSMC_MemoryDataWidth            = FSMC_MemoryDataWidth_8b;
    nand_init.FSMC_ECC                        = FSMC_ECC_Enable;
    nand_init.FSMC_ECCPageSize                = FSMC_ECCPageSize_512Bytes;
    nand_init.FSMC_TCLRSetupTime              = 0x00;
    nand_init.FSMC_TARSetupTime               = 0x00;
    nand_init.FSMC_CommonSpaceTimingStruct    = &p;
    nand_init.FSMC_AttributeSpaceTimingStruct = &p;

    FSMC_NANDInit(&nand_init);

    FSMC_NANDCmd(FSMC_Bank2_NAND, ENABLE);                      /* FSMC NAND bank cmd test.                             */

    return (DEF_OK);
}

void  FSDev_NAND_BSP_WrAddr (FS_QTY       unit_nbr,
                             CPU_INT08U  *p_addr,
                             CPU_SIZE_T   cnt)
{
    CPU_INT08U  datum;


    while (cnt > 0u) {
        datum                         = *p_addr;
        *(CPU_REG08 *)STM32_ADDR_ADDR =  datum;

        p_addr++;
        cnt--;
    }
}

void  FSDev_NAND_BSP_WrCmd (FS_QTY       unit_nbr,
                            CPU_INT08U  *p_cmd,
                            CPU_SIZE_T   cnt)
{
    CPU_INT08U  datum;


    while (cnt > 0u) {
        datum                        = *p_cmd;
        *(CPU_REG08 *)STM32_ADDR_CMD =  datum;

        p_cmd++;
        cnt--;
    }
}
